<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="14dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/group" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">
                <ImageView
                    android:layout_marginStart="8dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_search_filter"/>
                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginVertical="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/hintSearchText"
                    android:inputType="text"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_top">
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/filterItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:id="@+id/radioGroupObject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_company"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/filterCompanyName"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_Product"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/filterCompanyProduct"/>
                </RadioGroup>
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/filterItemCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioGroup
                    android:id="@+id/radioGroupFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_checkBox_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/filterCheckBoxName"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/radio_checkBox_Price"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/filterCheckBoxPrice"/>
                    <RadioButton
                        android:id="@+id/radio_checkBox_Founder"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/filterCheckBoxFounder"/>
                </RadioGroup>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activeRecyclerView"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_float_button"
        app:backgroundTint="?attr/colorOnSecondary"
        app:tint="@color/white"
        app:rippleColor="@color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>